error akatus style's div

--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -244,3 +244,12 @@ select
       .amount
         font-size: 11px
         color: #777
+        
+#alert
+  border: 1px solid red
+  background-color: #900
+  color: white
+  width: 907px
+  font-size: 13px
+  text-align: center
+  margin-bottom: 10px
