--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -31,7 +31,7 @@
             %h2 Preencha seus dados:
             %fieldset#your-data
               = f.semantic_fields_for :address do |a|
-                = a.input :zipcode, input_html: { id: 'zipcode', class: "input-medium" }, wrapper_html: { class: "wrapper" }
+                = a.input :zipcode, input_html: { id: 'zipcode', class: "input-small" }, wrapper_html: { class: "wrapper" }
                 / %span#loading{"style" => "display: inline"}
                 /   = image_tag 'application/loading.gif'
                 = a.input :street, input_html: { id: 'street', class: "input-large" }, wrapper_html: { class: "wrapper" }
@@ -76,7 +76,7 @@
             %h2 Dados do cartão de crédito:
             / = semantic_fields_for @lead, validate: true do |l|
             /   = l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, validate: true
-            = f.input :cpf, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }
+            = f.input :cpf, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }, hint: '(Somente números)'
             = f.semantic_fields_for :credit_card, validate: false do |c|
               / = c.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
               = c.input :card_holder_name, input_html: { class: "input-large" }, wrapper_html: { class: "wrapper" }
