show available unities when user has more than one

--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -25,5 +25,5 @@
 .row
   .span4
     = render_cell :ranking, :show
-  .span8
-    = render_cell :sales_chart, :show
+  / .span8
+  /   = render_cell :sales_chart, :show
