--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -135,6 +135,8 @@ select
       width: 550px //800
       float: left
       margin-bottom: 20px
+      p.inline-errors
+        margin-left: 163px
       li
         list-style: none
         &.wrapper
