--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -76,13 +76,13 @@
             %h2 Dados do cartão de crédito:
             / = semantic_fields_for @lead, validate: true do |l|
             /   = l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, validate: true
-            = f.input :cpf, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }, hint: '(Somente números)'
+            = f.input :cpf, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }
             = f.semantic_fields_for :credit_card, validate: false do |c|
               / = c.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-              = c.input :card_holder_name, input_html: { class: "input-large" }, wrapper_html: { class: "wrapper" }
-              = c.input :number, input_html: { class: "input-large" }, wrapper_html: { class: "wrapper" }
-              = c.input :security_code, input_html: { class: "input-medium", maxlength: 3 }, wrapper_html: { class: "wrapper" }            
-              = c.input :expiration_date, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'     
+              = c.input :card_holder_name, input_html: { class: "input-large", "autocomplete" => "off" }, wrapper_html: { class: "wrapper" }
+              = c.input :number, input_html: { class: "input-large", "autocomplete" => "off" }, wrapper_html: { class: "wrapper" }
+              = c.input :security_code, input_html: { class: "input-medium", maxlength: 3, "autocomplete" => "off" }, wrapper_html: { class: "wrapper" }            
+              = c.input :expiration_date, input_html: { class: "input-medium", id: "expiration_date" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'
               = c.input :installments, as: :select, collection: options_for_select((1..12).to_a, 1), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }       
 
               / = l.semantic_fields_for :credit_card, validate: false do |c|
