--- a/app/views/admin/vouchers/show.html.haml
+++ b/app/views/admin/vouchers/show.html.haml
@@ -11,7 +11,7 @@
   %p
     %label 
       %strong Telefone
-    = phone(@voucher.lead)
+    = formatted_phone(@voucher.lead)
   / %p
   /   = @voucher.unity.name
   / %p
