--- a/app/views/user_mailer/payment_approved.html.haml
+++ b/app/views/user_mailer/payment_approved.html.haml
@@ -13,7 +13,7 @@
   Endereço da unidade:
   %br
     = @voucher.unity.address  
-  = @voucher.unity.phone
+  = formatted_phone(@voucher.unity)
 
 %p Obrigado por estudar conosco!
 
