--- a/app/views/admin/leads/index.html.haml
+++ b/app/views/admin/leads/index.html.haml
@@ -28,7 +28,7 @@
       %tr
         %td= check_box_tag 'bulk_ids[]', lead.id
         %td= lead.name
-        %td= phone(lead)
+        %td= formatted_phone(lead)
         %td= I18n.l lead.prospected_at, format: :short if lead.prospected_at?
         %td= I18n.l lead.enrolled_at, format: :short if lead.enrolled_at?
         %td= I18n.l lead.created_at, format: :short if lead.created_at?
