not found unties's css

--- a/app/assets/stylesheets/application/search.sass
+++ b/app/assets/stylesheets/application/search.sass
@@ -23,6 +23,13 @@
     text-decoration: none
     margin-left: 20px
 
+#not-found
+  p
+    text-align: center
+    color: orange
+    font-size: 25px
+    font-weight: bold
+
 #img-center
   float: left
   width: 330px
