--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -106,6 +106,7 @@
     {{#each parcelas}}
     %li  
       %span.number {{this.quantidade}}x 
-      %span.amount de {{this.valor}}
-      / %input{type: 'radio', name: 'voucher[credit_card_attributes][installments]'} {{this.quantidade}}x - R$ {{this.valor}} (R$ {{this.total}})
+      %span.amount
+        de
+        = number_to_currency("{{this.valor}}")
     {{/each}}
